--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,17 @@
     <artifactId>mavenforge</artifactId>
     <version>0.1-SNAPSHOT</version>
 
-    <dependency>
-        <groupId>javax.script</groupId>
-        <artifactId>script-api</artifactId>
-        <version>1.0</version>
-    </dependency>
-
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.graalvm.js/js -->
+        <dependency>
+            <groupId>org.graalvm.js</groupId>
+            <artifactId>js</artifactId>
+            <version>23.0.4</version>
+        </dependency>
+    </dependencies>
 </project>
