--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ src/main/java/com/mavenforge/Test/*.java
 src/main/java/com/mavenforge/routes/*.java
 src/main/java/com/mavenforge/routes
 src/main/java/com/mavenforge/Main.java
+
+**/views
