--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,13 @@
             <artifactId>js</artifactId>
             <version>23.0.4</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.github.cdimascio/java-dotenv -->
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>5.2.2</version>
+        </dependency>
+
     </dependencies>
 </project>
