--- a/pom.xml
+++ b/pom.xml
@@ -29,4 +29,24 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.mavengorge.Console.Forge</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
