--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <version>5.2.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.benf/cfr -->
+        <dependency>
+            <groupId>org.benf</groupId>
+            <artifactId>cfr</artifactId>
+            <version>0.152</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -48,5 +54,13 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/java/com/mavenforge</directory>
+                <excludes>
+                    <exclude>Decoders/Custom/ClassFile/*.java</exclude>
+                </excludes>
+            </resource>
+        </resources>
     </build>
 </project>
